# rinha-backend-rust-3

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.api.x86_64-unknown-linux-musl  Dockerfile.worker  Dockerfile.worker.x86_64-unknown-linux-musl  Makefile  README.md  bucket.sh  docker-compose.yml
.github/workflows/: rinha.yml
api/: Cargo.toml
api/src/: handler.rs  main.rs  payments.rs  summary.rs  summary_influx.rs  uds.rs
app/: Cargo.toml  Dockerfile
app/src/: atomicf64.rs  http_api.rs  main.rs  payment_processor.rs
assets/: init.sql  nginx.conf  postgresql.conf
docker/: Dockerfile.raijin-lb.x86_64-linux  Dockerfile.raijin-lb.x86_64-linux-musl  Dockerfile.raijin-lb.x86_64-unknown-linux-musl  Dockerfile.worker.x86_64-unknown-linux-musl
kronosdb/: Cargo.toml
kronosdb/src/: atomicf64.rs  lib.rs  partition.rs  query.rs  record.rs
payment-processors/: docker-compose.yml
raijin-lb/: Cargo.toml  main.c
raijin-lb/src/: main.rs  uds_pool.rs  waker.rs
src/: app_state.rs  http_api.rs  main.rs  payment_processor.rs  storage.rs  worker.rs
submission/viniciusfonseca/: docker-compose.yml
submission/viniciusfonseca/assets/: nginx.conf
tests/: requests.js  rinha.js
worker/: Cargo.toml
worker/src/: health_check.rs  main.rs  payment_processor.rs  storage.rs  uds.rs
