[workspace]
resolver = "2"
members = [
    "api",
    "kronosdb",
    "worker"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3"
kronosdb = { path = "./kronosdb" }
mimalloc = "0.1.47"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
tokio = { version = "1.47.0", features = ["macros", "fs", "io-util", "rt-multi-thread"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
