[workspace]
resolver = "2"
members = [
    "api", "raijin-lb",
    "worker"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam = "0.8.4"
mimalloc = "0.1.47"
rust_decimal = { version = "1.37.2", features = ["serde-float", "db-tokio-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["macros", "fs", "rt-multi-thread", "io-util", "net", "time"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
