[package]
name = "raijin-lb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
deadpool = "0.12"
futures = { workspace = true }
mimalloc = { workspace = true }
num_cpus = "1.0"
tokio = { workspace = true }