[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true }
mimalloc = { workspace = true }
reqwest = { version = "0.12", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.47.0", features = ["macros", "fs", "rt-multi-thread"] }
tokio-postgres = { workspace = true }