[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
httparse = "1.10"
mimalloc = { workspace = true }
reqwest = { version = "0.12", default-features = false }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }